--- a/src/components/City.module.css
+++ b/src/components/City.module.css
@@ -4,11 +4,11 @@
   background-color: var(--color-dark--2);
   border-radius: 7px;
   overflow: scroll;
-
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  scroll-behavior: auto;
 }
 
 .row {
